web/less/frontend/modules/seller.less
@import "../_variables.less";
@import "../_mixins.less";

#body-seller-packages .control-group {
  margin-bottom: 20px;
}

#body-seller-packages {

  #main .form-actions {
    margin: 0;
    text-align: left;
    background-color: @lightBlue;
    border-top: none;
  }

  #main .form-horizontal {
    margin-top: 0;

    .radio_list {
      margin-top: 3px;
    }

    fieldset.signup-form {
      .control-group {
        margin: 0 auto 9px auto;
      }
    }

    .control-group {
      width: 600px;
      margin: 20px auto 25px auto;
    }

    .discount-code-wrapper {
      margin: 10px auto;
    }
    .control-group.packages-wrapper {
      margin-top: 10px;
      margin-bottom: 0;
    }

    .form-actions {
      padding-left: 180px;
    }

    label {
      font-size: 12px;
      color: @brown;
      letter-spacing: 0.01em;
    }
    label.control-label {
      width: 150px;
      font-weight: bold;
    }
    .control-description-r {
      padding-left: 10px;
      color: @brown;
      text-size: 12px;
    }
    .controls {
      width: 430px;
      margin-left: 170px;
    }
    .controls-inline {
      .radio.inline {
        padding-left: 5px;
      }
      ul.packages {
        float: left;
        width: 500px;

        li {
          float: left;
          margin-left: 40px;
        }
      }
    }
    .help-block {
      color: @brown;
      font-size: 12px;
      margin-top: 5px;
    }
    .email-suggestion {
      display: block;
      float: left;
      color: @brown;
      font-size: 12px;
      margin-top: 5px;
    }
    label.disabled, p.disabled {
      color: #a4a5a9;
    }
    .price-indent {
      margin-right: 2px;
      margin-left: 20px;
    }

    input[disabled], select[disabled], textarea[disabled], input[readonly], select[readonly], textarea[readonly] {
      background-color: #f2f8fc;
      border-color: #d3d9de;
    }
  }
  .payment-type label.control-label {
    float: none;
    width: 100%;
  }
  input, textarea, select, .uneditable-input {
    .border-radius(3px);
  }
  #packages_expiry_date_month {
    width: 50px;
  }
  #packages_expiry_date_year {
    width: 65px;
    margin-left: 4px;
  }
  .info-text {
    margin: 20px 10px 10px 180px;
    color: @blueDark;
    font-size: 11px;
    font-weight: bold;
  }
  .reset-label-colors label {
    color: @blueDark !important;
  }

  .form-horizontal #credit-card-info .control-group  {
    margin: 12px auto;
  }
  #packages_cvv_number {
    width: 60px;
  }
  .expiration-date-slash {
    float:left;
    margin: 2px 0 2px 2px;
    font-size: 18px;
    line-height:22px;
  }
  .cid_icon_generic {
    width: 36px;
    float: left;
    margin-top: 2px;
    margin-right: 6px;
  }
}

.seller-info-box-yellow {
  padding: 15px 15px 1px 15px;
  background: #fff8e0;

  .text-container {
    margin-bottom: 0;

    dd {
      margin-top: 5px;
      margin-bottom: 20px;
      line-height: 22px;
    }
  }
}

#body-seller-packages #main .form-horizontal .form-actions {
  margin-top: 20px;
  background-color: #fff;
}


.with-required-token {
  padding-top: 4px;

  .radio_list {
    margin-top: 10px;
    margin-bottom: 20px;
  }
}

.form-container-center {
  margin-top: 20px;
  padding-left: 120px;
  text-align: center;
}


span.old-price {
  text-decoration: line-through;
}

span.current-price {
  color: green;
  font-weight: bold;
}


//Packeges

.choice-packages {

  .radio input {
    margin-top: 9px;
  }
  .radio {
    margin-bottom: 15px;
    cursor: pointer;

  }
  .price-per-item {
    display: block;
    margin: 2px 0 0 20px;
    font-style: italic;
  }

  .package {
    display: block;
    height: 18px;
    margin-left: 6px;
    padding: 4px 10px 6px 10px;
    font-size: 20px;
    line-height: 20px;
    color: @blueDark;
    border: 1px solid #ededed;
    .border-radius(6px);
    .box-shadow( inset 0 0 0 1px #fff);
    background-color: #FCF9F3;

    &:hover {
      background-color: #FFF4CF !important;
      #gradient > .horizontal(#FFF6D1, #FFF2BD);
      border-color: #ffefbb;
    }

    span.strikethrough {
      text-decoration: line-through;
    }
    span.green {
      color: @green;
    }

  }
  .package1 {
    .package();
    width: 180px;
    #gradient > .horizontal(#FFFAF0, #FFF7E5);
  }
  .package2 {
    .package();
    width: 250px;
    #gradient > .horizontal(#FFFAF0, #FFEEC7);
  }
  .package3 {
    .package();
    width: 360px;
    #gradient > .horizontal(#FFFAF0, #FFE7AD);
  }
  .package6 {
    .package();
    width: 550px;
    #gradient > .horizontal(#FFFAF0, #FFDC8A);
  }
  .selected {
    &> span {
    border: 1px solid @blue;
    #gradient > .horizontal(@lightBlue, @lightBlue);
    }
  }
}

#body-seller-packages .tooltip.top.in {
  .opacity(100);
}
/* ... */

